vbnc/vbnc/tests/Errors/30311-38.vb
Option Explicit On
Option Strict On
Class XYZ
    Public Shared Sub Main()
        Dim x As Integer() = 1
    End Sub
End Class